# RustWebsite

./: .env.template  Cargo.toml  build.bat  build.rs
public/assets/css/: styles.css
public/assets/scss/: styles.scss
src/: main.rs  scss_compiler.rs  templating.rs
