[package]
name = "site"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
ascii = { version = "1.1", default-features = false, features = ["alloc"]}
tiny_http = { version = "0.12.0", default-features = false}
maud = { version = "0.26.0", default-features = false}
comrak = { version = "0.26.0", default-features = false, features = ["syntect"]}
syntect = { version = "5.2.0", default-features = false, features = []}
dotenv = "0.15.0"
chrono = "0.4.38"
sass-rs = "0.2.2"
sha2 = "0.10.8"
